# oxide

./: README.md
gtk4/oxide/: Cargo.toml  build.rs
gtk4/oxide/assets/: resources.gresource.xml
gtk4/oxide/assets/ui/: about_window.ui  cell.ui  main_window.ui
gtk4/oxide/src/: main.rs
gtk4/oxide/src/app/: imp.rs  mod.rs
gtk4/oxide/src/ui/: mod.rs
gtk4/oxide/src/ui/actions/: about.rs  file_open.rs  mod.rs  open_workspace.rs  preferences.rs
gtk4/oxide/src/ui/windows/: mod.rs
gtk4/oxide/src/ui/windows/about_window/: imp.rs  mod.rs
gtk4/oxide/src/ui/windows/main_window/: imp.rs  item.rs  mod.rs
gtk4/oxide/src/ui/windows/main_window/cell/: imp.rs  mod.rs
gtk4/oxide/src/ui/windows/main_window/directory_item/: mod.rs
gtk4/oxide/src/ui/windows/preferences/: imp.rs  mod.rs
relm4/: .gitignore
relm4/oxide/: Cargo.toml
relm4/oxide/assets/ui/: about_window.ui  main_window.ui  preferences.ui
relm4/oxide/src/: app.rs  application_message.rs  main.rs
relm4/oxide/src/actions/: about_action.rs  close_request.rs  mod.rs  new_python_file_action.rs  new_sql_file_action.rs  new_text_file_action.rs  workspace_folder_add.rs  workspace_open.rs  workspace_save.rs
relm4/oxide/src/components/: editor.rs  header.rs  main_window.rs  mod.rs  workspace.rs
relm4/oxide/src/components/dialogs/: about.rs
relm4/oxide/src/components/templates/: mod.rs  python_editor.rs  sql_editor.rs  text_editor.rs
relm4/oxide/src/components/views/: data_sources.rs  editor.rs  mod.rs  tree_column_view.rs  workspace.rs
relm4/oxide/src/structs/: mod.rs  node.rs  workspace.rs
(+5 files in other folders)
