[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
log="*"
env_logger="*"

serde = { version="*", features=["derive"]}
serde_json = "*"

gtk = { version="*", package="gtk4", features=["v4_14"] }

relm4 = "0.9.1"
relm4-components = "0.9.1"

rfd = "*"



[build-dependencies]
glib-build-tools = "*"